--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=PocketCap
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:QXUHcx7jNmedEHjRQ+wng1HJJ0OY3xZ9f1GRnJWUfRk=
-APP_DEBUG=false
-APP_URL=http://pocketcap.up.railway.app
+APP_DEBUG=true
+APP_URL=http://localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
